<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">Sandbox</string>
    <string name="action_settings">Settings</string>
    <string name="resourceLabel">Resource:</string>
    <string name="locationLabel">Location</string>
    <string name="IMEILabel">IMEI</string>
    <string name="profileLabel">Profile</string>
    <string name="carrierLabel">Carrier</string>
    <string name="App">App</string>
    
    <string name="customLabel">Custom</string>
    <string name="bogusLabel">Bogus</string>
    <string name="realLabel">Real</string>
    
    <string name="sandbox_loc_desc">can get location info served from sandbox app"</string>
    <string name="sandbox_loc_label">get location from sandbox"</string>
 
    
    <string name="save">Save All Settings</string>
    <string name="contactsLabel">Contacts</string>
    <string name="nameLabel">Name Only</string>
</resources>
